force-app/main/default/objects/Associated_Clause__c.object
<CustomObject>
    <fields>
        <fullName>ACP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ACP</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Associated Clauses</relationshipLabel>
        <relationshipName>Associated_Clauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clause</label>
        <referenceTo>APXT_Redlining__Clause__c</referenceTo>
        <relationshipLabel>Associated Clauses</relationshipLabel>
        <relationshipName>Associated_Clauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mirror_Clause__c</fullName>
        <label>Mirror Clause</label>
        <referenceTo>Mirror_Clause__c</referenceTo>
        <relationshipLabel>Associated Clauses</relationshipLabel>
        <relationshipName>Associated_Clauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Offer_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Request</label>
        <referenceTo>Bulk_Data_Processing__c</referenceTo>
        <relationshipLabel>Associated Clauses</relationshipLabel>
        <relationshipName>Associated_Clauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Associated Clauses</relationshipLabel>
        <relationshipName>Associated_Clauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Associated Clause</label>
    <nameField>
        <displayFormat>AC{00000}</displayFormat>
        <label>Associated Clause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>